manifests/freshrss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: freshrss
  labels:
    app: freshrss
spec:
  selector:
    app: freshrss
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
